feat: enable access to the jdk internals for the jruby docker images (#502)